[project]
name = "delivery-env"
version = "0.1.0"
description = "Smart delivery optimization environment"
authors = [
    { name = "Atharv Moon" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "openenv-core>=0.2.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0"
]

[project.scripts]
server = "server.app:main"
